k8s/app.creditscore.yaml
apiVersion: v1
kind: Service
metadata:
  name: helidon-creditscoreservice
  namespace: helidon$PARTICIPANT_ID
  labels:
    app: helidon-creditscore
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: helidon-creditscore
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helidon-creditscore
  namespace: helidon$PARTICIPANT_ID
spec:
  selector:
    matchLabels:
      app: helidon-creditscore
  replicas: 1
  template:
    metadata:
      labels:
        app: helidon-creditscore
    spec:
      containers:
      - name: helidon-creditscore
        image: iad.ocir.io/showitbuildit1/helidon-creditscore-app:$PARTICIPANT_ID
        ports:
        - containerPort: 8080
      imagePullSecrets:
        - name: ocirsecret
